feat(speech): listen and speak

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ SERPAPI_API_KEY=your_key_here
 GIPHY_API_KEY=your_key_here
 NEWS_API_KEY=your_key_here
 TMDB_API_KEY=your_key_here
-
+GOOGLE_API_KEY=your_key_here
+GOOGLE_CSE_ID=your_id_here
  
