--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ Jinja2==3.1.2
 jmespath==1.0.1
 kiwisolver==1.4.4
 kornia==0.6.0
-langchain==0.0.55
+git+https://github.com/bborn/langchain@harrison/conversational-agent@egg=langchain
 livereload==2.6.3
 llvmlite==0.39.1
 lmdb==1.3.0
