--- a/requirements.txt
+++ b/requirements.txt
@@ -1,309 +1,10 @@
-absl-py==1.3.0
-addict==2.4.0
-aiohttp==3.8.3
-aiosignal==1.3.1
-antlr4-python3-runtime==4.8
-anyio==3.6.2
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-astroid==2.13.2
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==22.1.0
-Automat==22.10.0
-autopep8==2.0.1
-backcall==0.2.0
-basicsr==1.4.2
-beautifulsoup4==4.11.1
-betterprompt==0.4.0
-black==22.12.0
-bleach==5.0.1
-blobfile==2.0.1
-cachetools==5.2.0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-click-log==0.4.0
-click-shell==2.1
-colorama==0.4.6
-comm==0.1.2
-commonmark==0.9.1
-constantly==15.1.0
-contourpy==1.0.6
-courlan==0.8.3
-cryptography==38.0.4
-cssselect==1.2.0
-cycler==0.11.0
-dataclasses==0.6
-dataclasses-json==0.5.7
-dateparser==1.1.6
-debugpy==1.6.4
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-diffusers==0.8.1
-dill==0.3.6
-docutils==0.19
-dotty-dict==1.3.1
-einops==0.3.0
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.1.0
-executing==1.2.0
-facexlib==0.2.5
-fairscale==0.4.12
-faiss-cpu==1.7.3
-fastjsonschema==2.16.2
-filelock==3.8.0
-filterpy==1.4.5
-flake8==6.0.0
-flake8-docstrings==1.6.0
 Flask==2.2.2
-Flask-Cors==3.0.10
-flask-vite==0.2.0
-fonttools==4.38.0
-fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2022.11.0
-ftfy==6.1.1
-future==0.18.2
-geocoder==1.38.1
-gfpgan==1.3.8
-giphy-client==1.0.0
-gitdb==4.0.10
-GitPython==3.1.30
-google-api-core==2.11.0
-google-api-python-client==2.70.0
-google-auth==2.14.1
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
-google-search-results==2.4.1
-googleapis-common-protos==1.57.0
-gotrue==0.5.4
--e git+ssh://git@github.com/jerryjliu/gpt_index.git@e685bbf6d04aed0b1f17c07bf0bc9a6a19b9973e#egg=gpt_index
-grpcio==1.50.0
-gunicorn==20.1.0
-h11==0.14.0
-html2text==2020.1.16
-htmldate==1.4.1
-httpcore==0.16.3
-httplib2==0.21.0
-httpx==0.23.3
-huepy==1.2.1
-huggingface-hub==0.11.0
-hyperlink==21.0.0
-idna==3.4
-imageio==2.9.0
-imaginAIry==6.0.0a0
-importlib-metadata==5.1.0
-incremental==22.10.0
-iniconfig==1.1.1
-invoke==1.7.3
-ipykernel==6.19.4
-ipython==8.7.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-isort==5.11.4
-itemadapter==0.7.0
-itemloaders==1.0.6
-itsdangerous==2.1.2
-jaraco.classes==3.2.3
-jaraco.context==4.2.0
-jedi==0.18.2
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-events==0.5.0
-jupyter_client==7.4.8
-jupyter_core==5.1.1
-jupyter_server==2.0.6
-jupyter_server_terminals==0.4.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-jusText==3.0.0
-keyring==23.13.1
-kiwisolver==1.4.4
-kornia==0.6.0
-langchain==0.0.61
-langcodes==3.3.0
-lazy-object-proxy==1.9.0
-livereload==2.6.3
-llvmlite==0.39.1
-lmdb==1.3.0
-lxml==4.9.2
-Markdown==3.4.1
-markdown2==2.4.6
-MarkupSafe==2.1.1
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mistune==2.0.4
-more-itertools==9.0.0
-multidict==6.0.2
-mypy==0.991
-mypy-extensions==0.4.3
-nbclassic==0.4.8
-nbclient==0.7.2
-nbconvert==7.2.7
-nbformat==5.7.1
-nest-asyncio==1.5.6
-networkx==2.8.8
-nltk==3.8.1
-notebook==6.5.2
-notebook_shim==0.2.2
-numba==0.56.4
-numpy==1.23.5
-oauthlib==3.2.2
-omegaconf==2.1.1
-open-clip-torch==2.7.0
-openai==0.25.0
-opencv-python==4.6.0.66
-openpyxl==3.0.10
-packaging==21.3
-pandas==1.5.2
-pandas-stubs==1.5.2.221124
-pandocfilters==1.5.0
-parsel==1.7.0
-parso==0.8.3
-pathspec==0.10.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.3.0
-pkginfo==1.9.6
-platformdirs==2.6.2
-pluggy==1.0.0
-postgrest-py==0.10.3
-prometheus-client==0.15.0
-prompt-toolkit==3.0.36
-Protego==0.2.1
-protobuf==3.20.3
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.10.0
-pycparser==2.21
-pycryptodomex==3.16.0
+giphy_client==1.0.0
+langchain==0.0.107
 pydantic==1.10.2
-pyDeprecate==0.3.1
-PyDispatcher==2.0.6
-pydocstyle==6.2.3
-pyflakes==3.0.1
-Pygments==2.13.0
-pylint==2.15.10
-pyOpenSSL==22.1.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-pytest==7.2.0
-pytest-dotenv==0.5.2
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-python-gitlab==3.12.0
-python-json-logger==2.0.4
-python-semantic-release==7.32.1
-pytorch-lightning==1.4.2
-pytz==2022.6
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==24.0.1
-qtconsole==5.4.0
-QtPy==2.3.0
-queuelib==1.6.2
-rake-nltk==1.0.6
-ratelim==0.1.6
-readme-renderer==37.3
-realesrgan==0.3.0
-realtime==0.0.5
-redis==4.4.0
-regex==2022.10.31
-requests==2.28.1
-requests-file==1.5.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==12.6.0
-rsa==4.9
-scikit-image==0.19.3
-scipy==1.9.3
-Scrapy==2.7.1
-semantic-version==2.10.0
-semver==2.13.0
-Send2Trash==1.8.0
-service-identity==21.1.0
-setuptools-rust==1.5.2
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.44
-stack-data==0.6.2
-storage3==0.3.6
-supabase==0.7.1
-supafunc==0.2.2
-tb-nightly==2.12.0a20221123
-tenacity==8.1.0
-tensorboard==2.11.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-terminado==0.17.1
-tifffile==2022.10.10
-tiktoken==0.1.2
-timm==0.6.12
-tinycss2==1.2.1
-tld==0.12.6
-tldextract==3.4.0
-tokenizers==0.12.1
-tomli==2.0.1
-tomlkit==0.11.6
-torch==1.13.0
-torchdiffeq==0.2.3
-torchmetrics==0.6.0
-torchvision==0.14.0
-tornado==6.2
-tqdm==4.64.1
-trafilatura==1.4.0
-traitlets==5.8.0
-transformers==4.19.2
-twine==3.8.0
-Twisted==22.10.0
-types-pytz==2022.6.0.1
-types-requests==2.28.11.7
-types-urllib3==1.26.25.4
-typing-inspect==0.8.0
-typing_extensions==4.4.0
-tzdata==2022.7
-tzlocal==4.2
-uri-template==1.2.0
-uritemplate==4.1.1
-urllib3==1.26.13
-w3lib==2.1.1
-wcwidth==0.2.5
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.4.2
-websockets==10.4
-Werkzeug==2.2.2
-widgetsnbextension==4.0.5
-wikipedia==1.4.0
-wolframalpha==5.0.0
-wrapt==1.14.1
-xmltodict==0.13.0
-yapf==0.32.0
-yarl==1.8.1
-zipp==3.10.0
-zope.interface==5.5.2
+supabase==1.0.2
+wikipedia
+openai
+wolframalpha
+google-api-python-client
+google-search-results
